// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reduceDataArrays return only a fraction of points 1`] = `
Array [
  248679.0639641689,
  248679.0639641689,
  248679.0639641689,
  248679.06420830952,
  248679.06664971577,
  248679.06664971577,
  248679.06664971577,
  248679.06664971577,
  248679.06664971577,
  248679.06664971577,
]
`;

exports[`reduceDataArrays return only a fraction of points 2`] = `
Array [
  248679.0639641689,
  248679.06664971577,
]
`;

exports[`reduceDataArrays return only a fraction of points 3`] = `
Array [
  603.5,
  601.9400000000605,
  603.7299999999814,
  606.0700000000652,
  604.8200000000652,
  605.4700000000885,
  602.390000000014,
  606.2600000000093,
  603.9600000000792,
  603.0700000000652,
]
`;

exports[`reduceDataArrays return only a fraction of points 4`] = `
Array [
  603.5,
  605.4700000000885,
]
`;

exports[`reduceDataArrays return only a fraction of points 5`] = `
Array [
  928.0500000000466,
  935.9500000000698,
  926.9600000000792,
  915.2900000000373,
  921.5600000000559,
  918.4100000000326,
  933.6600000000326,
  914.3000000000466,
  925.8200000000652,
  930.2800000000279,
]
`;

exports[`reduceDataArrays return only a fraction of points 6`] = `
Array [
  928.0500000000466,
  918.4100000000326,
]
`;

exports[`reduceDataArrays return only a fraction of points 7`] = `
Array [
  12.120000000000005,
  12.269999999999982,
  12.170000000000016,
  11.899999999999977,
  12.100000000000023,
  11.970000000000027,
  12.199999999999989,
  12,
  12.170000000000016,
  12.329999999999984,
]
`;

exports[`reduceDataArrays return only a fraction of points 8`] = `
Array [
  12.120000000000005,
  11.970000000000027,
]
`;

exports[`reduceDataArrays return only a fraction of points 9`] = `
Array [
  25856,
  24320,
  24832,
  29696,
  25600,
  27392,
  25344,
  30464,
  24832,
  29952,
]
`;

exports[`reduceDataArrays return only a fraction of points 10`] = `
Array [
  25856,
  27392,
]
`;

exports[`reduceDataArrays return only a fraction of points 11`] = `
Array [
  36352,
  33536,
  33792,
  33792,
  36864,
  34048,
  34816,
  33792,
  36352,
  34048,
]
`;

exports[`reduceDataArrays return only a fraction of points 12`] = `
Array [
  36352,
  34048,
]
`;

exports[`reduceDataArrays return only a fraction of points 13`] = `
Array [
  31488,
  32000,
  31744,
  35840,
  32512,
  33792,
  32000,
  34816,
  31744,
  31488,
]
`;

exports[`reduceDataArrays return only a fraction of points 14`] = `
Array [
  31488,
  33792,
]
`;
